Create a new index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,33 @@
 </head>
 <body>
     <h1>10 lệnh Git cơ bản </h1>
+    <h1>Big and Important Header</h1>
+    <h2>Slightly Less Big Header</h2>
+    <h3>Sub-Header</h3>
+    <p style="font-size: 120%;">éc éc </p>
+    <strong style="font-size: 500%;"> Em depm leam chuc mung iem co duoc toy</strong> <br>
+    <em style="font-size: 300%;" > boi vi iem deap nghieng thung do nuoc</em> <br>
+    <a href="https://www.youtube.com/watch?v=rulE5MJICLo&ab_channel=1980sMusic" target="blank">Listen to music in a new tab</a> <br>
+    <a href="https://www.youtube.com/watch?v=rulE5MJICLo&ab_channel=1980sMusic" title="Nghe nhạc này buồn ngủ lắm"  target="blank" >Listen to music in a new tab hehe</a> <br>
+    <img src="D:\Downloads\1a71caf565bfb98ee52adbf59614fa86.jpg"  width="320" alt="the name of your image">
+    <table>
+        <tbody>
+        <tr>
+        <th>First column</th>
+        <th>Second column</th>
+        <th>Third column</th>
+        </tr>
+        <tr>
+        <td>ô thứ nhất</td>
+        <td>ô thứ 2</td>
+        <td>ô thứ 3 cột thứ nhất</td>
+        </tr>
+        <td>em yeu cau anh </td>
+        <td>cho em xin in tu nha</td>
+        <td>---Hong be oiii!!!</td>
+        </tbody>
+        </table>
+   <blockquote>I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain.</blockquote>
 </body>
+
 </html>
